--- a/17.Blog.Practice/style.css
+++ b/17.Blog.Practice/style.css
@@ -15,18 +15,20 @@
   align-items: center;
 }
 header {
-  background-color: rgb(155, 202, 186);
+  background-color: rgb(35, 11, 92);
   padding: 30px;
 }
 .header h3 {
-  color: rgb(16, 45, 83);
+  color: rgb(255, 255, 255);
   font-size: 1.5rem;
   text-shadow: #fc0 1px 0 10px;
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
-a {
+ a {
   margin-right: 15px;
+  color: rgb(52, 36, 197);
+
 }
 
 input {
@@ -39,52 +41,58 @@ input {
 .card {
   border: 1px solid;
   width: 20%;
-  height: 150px;
-  padding: 7px 19px;
-  background-color: rgb(255, 189, 163);
+  height: 180px;
+  padding: 7px 25px;
+  background-color: rgb(136, 167, 162);
   border-radius: 5px;
   border: none;
   margin-top: 30px;
+  /* box-shadow: 10px 12px 2px 1px rgba(24, 24, 204, 0.2); */
+  box-shadow: 10px 9px 9px rgb(8, 4, 63);
 }
 .cards {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  flex-wrap: wrap;
+  gap: 10px;
 }
 .card h4 {
   font-size: 1.2rem;
-  color: rgb(8, 8, 100);
+  color: rgb(8, 100, 23);
   margin-bottom: 10px;
 }
 .card h5 {
   font-size: 1.2rem;
-  color: rgb(100, 26, 8);
-  margin-bottom: 10px;
+  color:rgb(246, 246, 248)
+ 
 }
 .card p {
   font-size: 1 rem;
-  color: rgb(189, 75, 47);
-  margin-bottom: 10px;
+  color: rgb(16, 5, 117);
+  margin-top: 10px;
 }
 .delete {
   width: 80px;
   padding: 5px;
   border-radius: 5px;
   border: none;
-  background-color: rgb(192, 45, 45);
+  background-color: rgb(202, 0, 0);
+  color: azure;
 }
 .edit {
-  width: 80px;
-  padding: 5px;
+  width: 0px;
+  padding: 5px 10px;
   border-radius: 5px;
   border: none;
-  background-color: rgb(13, 124, 19);
+  background-color: rgb(13, 15, 124);
+  color: azure;
 }
 .btn {
   margin-top: 20px;
 }
 
 .banner {
-  background-color: antiquewhite;
+  background-color: rgb(214, 191, 157);
   height: 100vh;
 }
