--- a/17.Blog.Practice/style.css
+++ b/17.Blog.Practice/style.css
@@ -25,10 +25,9 @@ header {
   font-family: Cambria, Cochin, Georgia, Times, "Times New Roman", serif;
 }
 
- a {
+a {
   margin-right: 15px;
   color: rgb(52, 36, 197);
-
 }
 
 input {
@@ -39,38 +38,40 @@ input {
   outline: none;
 }
 .card {
-  border: 1px solid;
+  border: 1px solid transparent;
   width: 20%;
   height: 180px;
-  padding: 7px 25px;
+  padding: 50px;
   background-color: rgb(136, 167, 162);
   border-radius: 5px;
   border: none;
-  margin-top: 30px;
+  /* margin-top: 30px; */
   /* box-shadow: 10px 12px 2px 1px rgba(24, 24, 204, 0.2); */
   box-shadow: 10px 9px 9px rgb(8, 4, 63);
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
 }
 .cards {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  gap: 10px;
+  gap: 20px;
 }
 .card h4 {
   font-size: 1.2rem;
   color: rgb(8, 100, 23);
-  margin-bottom: 10px;
+  /* margin-bottom: 10px; */
 }
 .card h5 {
   font-size: 1.2rem;
-  color:rgb(246, 246, 248)
- 
+  color: rgb(246, 246, 248);
 }
 .card p {
-  font-size: 1 rem;
+  font-size: 1rem;
   color: rgb(16, 5, 117);
-  margin-top: 10px;
+  /* margin-top: 10px; */
 }
 .delete {
   width: 80px;
@@ -88,11 +89,12 @@ input {
   background-color: rgb(13, 15, 124);
   color: azure;
 }
-.btn {
+/* .btn {
   margin-top: 20px;
-}
+} */
 
 .banner {
   background-color: rgb(214, 191, 157);
   height: 100vh;
+  padding: 1.5rem 0;
 }
