--- a/23.flowers.practice/css/style.css
+++ b/23.flowers.practice/css/style.css
@@ -280,6 +280,7 @@ nav ul li a {
   background-size: cover;
 }
 .pricingHead {
+  margin-top: 200px;
   padding-top: 300px;
   text-align: center;
 }
